@@ -1,6 +1,7 @@
 Changelog for mk-table-checksum and mk-checksum-filter:
 
    * --wait did not work (issue 1319).
+   * Invalid --throttle-method values did not cause an error (issue 1309).
 
 2011-05-05: version 1.2.22
 
